--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sistema de Certificaciones Agrícolas - SICAG"
+      content="SICAG -Sistema Integral de Consultoría y Asesoría Gremial"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>SICAG - Sistema de Certificaciones Agrícolas</title>
+    <title>SICAG - Sistema Integral de Consultoría y Asesoría Gremial</title>
   </head>
   <body>
     <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
